--- a/myaxtls/axtls.cbp
+++ b/myaxtls/axtls.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="axtls" prefix_auto="1" extension_auto="1" />
+				<Option output="libaxtls" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -18,22 +18,21 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="axtls" prefix_auto="1" extension_auto="1" />
+				<Option output="libaxtls" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Release/" />
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
-					<Add option="-march=i686" />
-					<Add option="-O2" />
+					<Add option="-O3" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
 				</Linker>
 			</Target>
 			<Target title="Release-lua-jit">
-				<Option output="axtls-lua-jit" prefix_auto="1" extension_auto="1" />
+				<Option output="libaxtls-lua-jit" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Release/" />
 				<Option type="2" />
@@ -49,7 +48,7 @@
 				</Linker>
 			</Target>
 			<Target title="Debug-lua-jit">
-				<Option output="axtls-lua-jit" prefix_auto="1" extension_auto="1" />
+				<Option output="libaxtls-lua-jit" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -62,14 +61,13 @@
 				</Compiler>
 			</Target>
 			<Target title="Release O3">
-				<Option output="axtls" prefix_auto="1" extension_auto="1" />
+				<Option output="libaxtls" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Release/" />
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
-					<Add option="-march=i686" />
 					<Add option="-fomit-frame-pointer" />
 					<Add option="-fexpensive-optimizations" />
 					<Add option="-O3" />
