--- a/SquiLu/squilu.cbp
+++ b/SquiLu/squilu.cbp
@@ -76,7 +76,7 @@
 				<Option output="bin/squilu.exe" prefix_auto="1" extension_auto="0" />
 				<Option object_output="obj/Release-win32/" />
 				<Option type="1" />
-				<Option compiler="mingw32_compiler" />
+				<Option compiler="mingw_gnu_gcc_compiler" />
 				<Compiler>
 					<Add option="-O3" />
 					<Add option="-Wall" />
@@ -439,6 +439,34 @@
 					<Add directory="../libharu/src" />
 				</Linker>
 			</Target>
+			<Target title="Debug 64bits">
+				<Option output="bin/squilu-dbg" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="-Wall" />
+					<Add option="-g" />
+					<Add option="-DNDEBUG=1" />
+					<Add option="-DWITH_FULL_DAD_EXTRAS=1" />
+					<Add option="-D_SQ64=1" />
+					<Add option="-DCONFIG_64=1" />
+					<Add directory="../../zeromq-3.2.2/include" />
+				</Compiler>
+				<Linker>
+					<Add library="../../zeromq-3.2.2/libzmq3.a" />
+					<Add library="pthread" />
+					<Add library="rt" />
+					<Add library="dl" />
+					<Add library="axtls" />
+					<Add library="mpdecimal" />
+					<Add library="discount" />
+					<Add library="fltk_z" />
+					<Add directory="../../zeromq-3.2.2" />
+					<Add directory="../fltk/lib" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
@@ -493,6 +521,7 @@
 		</Compiler>
 		<Linker>
 			<Add library="m" />
+			<Add library="uuid" />
 			<Add directory="lib" />
 			<Add directory="../myaxtls" />
 			<Add directory="../mpdecimal" />
@@ -525,6 +554,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/dynamic_library.h">
 			<Option target="Debug" />
@@ -538,6 +568,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/fpdf.cpp">
 			<Option target="Debug" />
@@ -551,6 +582,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/fpdf.h">
 			<Option target="Debug" />
@@ -564,6 +596,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/lua_socket.cpp">
 			<Option target="Debug" />
@@ -577,6 +610,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/lua_socket.h">
 			<Option target="Debug" />
@@ -590,6 +624,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/mongoose.c">
 			<Option compilerVar="CC" />
@@ -604,6 +639,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/mongoose.h">
 			<Option target="Debug" />
@@ -617,6 +653,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/pdf-font.cpp">
 			<Option target="Debug" />
@@ -630,6 +667,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/pdf-font.h">
 			<Option target="Debug" />
@@ -643,6 +681,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_axtls.c">
 			<Option compilerVar="CC" />
@@ -657,6 +696,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_base64.cpp">
 			<Option target="Debug" />
@@ -670,6 +710,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_decimal.cpp">
 			<Option target="Debug" />
@@ -682,6 +723,7 @@
 			<Option target="Release FLTK win32 no console" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_fltk.cpp">
 			<Option target="Debug" />
@@ -695,6 +737,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_fpdf.cpp">
 			<Option target="Debug" />
@@ -708,6 +751,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_fs.c">
 			<Option compilerVar="CC" />
@@ -722,6 +766,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_markdown.cpp">
 			<Option target="Debug" />
@@ -734,6 +779,7 @@
 			<Option target="Release FLTK win32 no console" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mix.cpp">
 			<Option target="Debug" />
@@ -747,6 +793,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mongoose.cpp">
 			<Option target="Debug" />
@@ -760,6 +807,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_mysql.cpp" />
 		<Unit filename="../SquiLu-ext/sq_parsecsv.cpp">
@@ -773,6 +821,7 @@
 			<Option target="Release FLTK win32 no console" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_postgresql.cpp">
 			<Option target="Debug" />
@@ -785,6 +834,7 @@
 			<Option target="Release FLTK win32 no console" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_rs232.c">
 			<Option compilerVar="CC" />
@@ -799,6 +849,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_slave_vm.cpp">
 			<Option target="Debug" />
@@ -812,6 +863,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_socket.cpp">
 			<Option target="Debug" />
@@ -825,6 +877,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_sqlite3.cpp">
 			<Option target="Debug" />
@@ -838,6 +891,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_tinyxml2.cpp">
 			<Option target="Debug" />
@@ -851,6 +905,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_zlib.cpp">
 			<Option target="Debug" />
@@ -864,6 +919,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sq_zmq3.cpp">
 			<Option target="Debug" />
@@ -876,6 +932,7 @@
 			<Option target="Release FLTK win32 no console" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqlite3.c">
 			<Option compilerVar="CC" />
@@ -890,6 +947,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqlite3.h">
 			<Option target="Debug" />
@@ -903,6 +961,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqmodule.h">
 			<Option target="Debug" />
@@ -916,6 +975,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqratimport.cpp">
 			<Option target="Debug" />
@@ -929,6 +989,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/sqratimport.h">
 			<Option target="Debug" />
@@ -942,6 +1003,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/tinyxml2.cpp">
 			<Option target="Debug" />
@@ -955,6 +1017,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="../SquiLu-ext/tinyxml2.h">
 			<Option target="Debug" />
@@ -968,6 +1031,7 @@
 			<Option target="Release wince" />
 			<Option target="Release 64bits" />
 			<Option target="Release FLTK 64bits" />
+			<Option target="Debug 64bits" />
 		</Unit>
 		<Unit filename="dadbiz.rc">
 			<Option compilerVar="WINDRES" />
